--- a/seconda_app/templates/es_if_elif.html
+++ b/seconda_app/templates/es_if_elif.html
@@ -31,17 +31,16 @@
     {% endif %}
     {% if var1 >= var2 %}
         <p><i>var1 è maggiore o uguale a var2</i></p>
-    {% elif var < var1 %}
+    {% elif var1 < var2 %}
         <p><i>var1 è minore di var2</i></p>
     {% endif %}
-    {% elif var1 == var2 %}
+    {% if var1 == var2 %}
         <p><i>var1 è uguale a var2</i></p>
     {% elif var1 != var2 %}
         <p><i>var1 non è uguale a var2</i></p>
     {% endif %}
     {% if var1 < var2 and var1 < var3 %}
         <p><i>var1 è minore di var2 e var1 è minore di var3</i></p>
-    {% endif %}
     {% elif var1 > var2 and var1 > var3 %}
         <p><i>var1 è maggiore di var2 e var1 è maggiore di var3</i></p>
     {% endif %}
