--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% extends "base.html"%}
 {%load static%}
 <!DOCTYPE html>
 <html lang="en">
@@ -9,10 +8,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <title>{% block title %} Chi_siamo {% endblock title %}</title>
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="">Primo Progetto</a>
+        <a class="navbar-brand" href="#">Primo Progetto</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,10 +50,7 @@
       </nav>
 
     <div class="container my-4">
-        {%block title%} {{block.super}} | Chi siamo {%endblock title%}
         {%block content%}
-        <h1>Chi siamo</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi ex deleniti nisi error accusantium quibusdam quod maiores saepe officia, alias ad distinctio eius tempora ab! Tenetur officia quod illum eligendi?</p>
         {%endblock content%}
         {%block script%}
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
