--- a/templates/base.html
+++ b/templates/base.html
@@ -18,29 +18,17 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/admin">Admin</a>
-                <a class="dropdown-item" href="{% url 'prima_app:index'%}">Prima app</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'seconda_app:index_2'%}">Seconda app</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
+        <a class="dropdown-item" href="/admin">Admin</a>
+        <a class="dropdown-item" href="{% url 'prima_app:index'%}">Prima app</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="{% url 'seconda_app:index_2'%}">Seconda app</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="{% url 'prova_pratica_0:index_3'%}">Prova Pratica 0</a>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
