--- a/templates/index_generale.html
+++ b/templates/index_generale.html
@@ -11,6 +11,7 @@
         <li><a href="/admin">admin</a></li>
         <li><a href="{% url 'prima_app:index'%}">prima_app</a></li>
         <li><a href="{% url 'seconda_app:index_2'%}">seconda_app</a></li>
+        <li><a href="{% url 'prova_pratica_0:index_3'%}">seconda_app</a></li>
     </ol>
 </body>
 </html>
