--- a/prova_pratica_0/templates/index_3.html
+++ b/prova_pratica_0/templates/index_3.html
@@ -5,6 +5,6 @@
 {%block content%}
   <ol>
     <li><a href="{% url 'prova_pratica_0:maxmin'%}">Max Min</a></li>
-    <li><a href="{% url 'prova_pratica_0:media'%}">Welcome</a></li>
+    <li><a href="{% url 'prova_pratica_0:media'%}">Media</a></li>
   </ol>
 {%endblock content%}
