--- a/primo_progetto/templates/base.html
+++ b/primo_progetto/templates/base.html
@@ -61,6 +61,16 @@
           <a class="dropdown-item" href="{% url 'prova_pratica_0:media'%}">media</a>
         </div>
         </div>
+
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            News
+          </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="{% url 'news:lista_articoli'%}">Articoli</a>
+          <a class="dropdown-item" href="{% url 'news:lista_giornalisti'%}">Giornalisti</a>
+        </div>
+        </div>
         
 
 
