--- a/primo_progetto/templates/base.html
+++ b/primo_progetto/templates/base.html
@@ -71,6 +71,17 @@
           <a class="dropdown-item" href="{% url 'news:lista_giornalisti'%}">Giornalisti</a>
         </div>
         </div>
+
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Verifica
+          </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="{% url 'verifica:view_a'%}">View_a</a>
+          <a class="dropdown-item" href="{% url 'verifica:view_b'%}">view_b</a>
+          <a class="dropdown-item" href="{% url 'verifica:view_c'%}">view_c</a>
+        </div>
+        </div>
         
 
 
