--- a/primo_progetto/templates/index_generale.html
+++ b/primo_progetto/templates/index_generale.html
@@ -9,5 +9,6 @@
     <li><a href="{% url 'seconda_app:index_2'%}">seconda_app</a></li>
     <li><a href="{% url 'prova_pratica_0:index_3'%}">prova_pratica_0</a></li>
     <li><a href="{% url 'news:articoli'%}">news</a></li>
+    <li><a href="{% url 'verifica:view_a'%}">news</a></li>
 </ol>
 {%endblock content%}
