--- a/verifica/templates/view_c.html
+++ b/verifica/templates/view_c.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 <h4>Media: </h4>
-<ol>
-    <li>Giuseppe Gullo: {{media1}}</li>
-    <li>Antonio Barbera: {{media2}}</li>
-    <li>Nicola Spina: {{media3}}</li>
-</ol>
+{% for key, values in medie.items %}
+    <ul>
+        <li>{{key}} : {{values}}</li>
+    </ul>
+{% endfor %}
 {% endblock content %}
