--- a/primo_progetto/templates/base.html
+++ b/primo_progetto/templates/base.html
@@ -82,9 +82,21 @@
           <a class="dropdown-item" href="{% url 'verifica:view_c'%}">view_c</a>
         </div>
         </div>
+
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Login
+          </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          {% if request.user.is_authenticated %}
+            <a class="dropdown-item" href="{% url 'logout'%}">Esci</a>
+          {% else %}
+            <a class="dropdown-item" href="#">Registrati</a>
+            <a class="dropdown-item" href="{% url 'login'%}">Login</a>
+          {% endif %}
+        </div>
+        </div>
         
-
-
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
