--- a/primo_progetto/templates/base.html
+++ b/primo_progetto/templates/base.html
@@ -69,6 +69,7 @@
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <a class="dropdown-item" href="{% url 'news:lista_articoli'%}">Articoli</a>
           <a class="dropdown-item" href="{% url 'news:lista_giornalisti'%}">Giornalisti</a>
+          <a class="dropdown-item" href="{% url 'news:tabella_giornalisti'%}">Tabella Giornalisti</a>
         </div>
         </div>
 
